@@ -11,6 +11,7 @@ Plugs Change Log
 #. Add alignTo=fixed support to poshytip
 #. Update zh_CN translation
 #. Improve dialog2 plugin, add field_prefix option
+#. Fix jqmultiselect container width bug
 
 0.1.2 Version
 -----------------
